--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
   a {
-    color: black;
+    color: blue;
     text-decoration: none;
   }
 
@@ -25,6 +25,10 @@
 
   #article {
     padding: 30px;
+  }
+
+  #page1 #grid #sidebar .page1, #page2 #grid #sidebar .page2, #page3 #grid #sidebar .page3, #page4 #grid #sidebar .page4{
+    text-decoration: underline;
   }
 
   @media (max-width:700px) {
