--- a/style.css
+++ b/style.css
@@ -7,8 +7,35 @@
     text-align: center;
     font-size: 40px;
     margin: 0;
-    padding-bottom: 30px;
-    border-bottom: 1px solid gray;
+  }
+
+  header{
+    margin: 0px;
+    padding:0;
+  }
+
+  #ServiceNameArea{
+    display: grid;
+    grid-template-columns: 1fr 70px;
+    border-bottom: 3px double powderblue;
+    padding-bottom: 0;
+  }
+  #night_day_position{
+    text-align: center;
+  }
+
+  .button {
+    background-color: powderblue;
+    border: none;
+    color: white;
+    padding: 15px 15px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 7px;
   }
 
   #grid {
@@ -17,7 +44,7 @@
   }
 
   #sidebar{
-    border-right: 1px solid gray;
+    border-right: 3px double powderblue;
     width: 250px;
     margin: 0;
     padding-top: 20px;
